assets/scss/article.scss
/**************************************ARTICLE HEAD**************************************/

.article-hero{
    @media screen and (max-width: $phablet){
        &::before {
          content: "";
          width: 100%;
          height: 20px;
          background: var(--primary);
          position: absolute;
          left: 0;
          top: 0;
          -webkit-transition: var(--color-mode-transition);
          -o-transition: var(--color-mode-transition);
          transition: var(--color-mode-transition);
        }
    
        &::after {
          content: "";
          width: 100%;
          height: 10px;
          background: var(--background-color);
          position: absolute;
          left: 0;
          top: 10px;
          border-top-left-radius: 25px;
          border-top-right-radius: 25px;
          -webkit-transition: var(--color-mode-transition);
          -o-transition: var(--color-mode-transition);
          transition: var(--color-mode-transition);
        }
      }
}

.article-meta{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;

    /*PHABLET*/
    @media screen and (max-width: $phablet){
        margin-left: 0;
        flex-direction: column;
    }
}

.article-header{
    position: relative;
    z-index: 10;
    margin:100px auto 60px;
    max-width: 749px;
  
    @media screen and (max-width: $desktop){
        max-width: calc(507px + 53px);
        margin: 100px auto 40px;
    }

    @media screen and (max-width: $tablet){
        margin: 100px auto 40px;
        max-width: 480px;
    }

    @media screen and (max-width: $phablet){
        margin: 170px auto 40px;
        padding: 0 40px;
    }
  
    @media screen and (max-height: 700px) {
      margin: 100px auto;
    }
}

.article-hero-heading{
    font-size: 48px;
    font-family: var(--serif);
    margin-bottom: 25px;
    font-weight: bold;
    line-height: 1.32;
	text-align: center;
  
    @media screen and (max-width: $tablet){
        margin-bottom: 20px;
        font-size: 36px;
    }

    @media screen and (max-width: $phablet){
        font-size: 32px;
    }
}

.article-hero-subtitle{
    padding: 10px;
    max-width: 700px;
    margin-left: auto;
    margin-right: auto;
    position: relative;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
	justify-content: center;
    font-size: 18px;
    color: var(--grey);

    /*PHABLET*/
    @media screen and (max-width: $phablet){
        border: 1px solid var(--horizontalRule);
        border-radius: 5px;
    }
  
    @media screen and(max-width: $phablet){
        font-size: 14px;
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
            -ms-flex-direction: column;
                flex-direction: column;

        &.has-coauthors::before{
            content: '';
            position: absolute;
            left: -20px;
            right: -20px;
            top: -10px;
            bottom: -10px;
            border: 1px solid var(--horizontalRule);
            opacity: 0.5;
            border-radius: 5px;
        }

        strong {
            display: block;
            font-weight: 500;
            margin-bottom: 5px;
        }
    }
}

.article-hero-image{
    position: absolute;
    z-index: 1;
    width: 100%;
    max-width: 944px;
    overflow: hidden;
    margin: 0 auto;
	display: flex;
	justify-content: center;
    -webkit-box-shadow: 0 30px 60px -10px rgba(0, 0, 0, 0.2),
      0 18px 36px -18px rgba(0, 0, 0, 0.22);
            box-shadow: 0 30px 60px -10px rgba(0, 0, 0, 0.2),
      0 18px 36px -18px rgba(0, 0, 0, 0.22);

    img{
        width: 100%;
    }

    /*DESKTOP MEDIUM*/
    @media screen and (max-width: $desktop_medium){
        position: relative;
    }
  
    /*TABLET*/
    @media screen and (max-width: $tablet){
        max-width: 100%;
    }

    /*PHABLET*/
    @media screen and (max-width: phablet){
        margin: 0 auto;
        width: calc(100vw - 40px);
        height: 220px;
    
        & > div {
          height: 220px;
        }
    }
}

.article-author-link{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    color: inherit;

    &:hover{
        text-decoration: none;
    }

    &:visited{
        color: inherit;
    }
  
    strong {
      -webkit-transition: var(--color-mode-transition);
      -o-transition: var(--color-mode-transition);
      transition: var(--color-mode-transition);
    }
  
    &:hover strong {
      color: var(--primary);
    }
}

.article-author-avatar{
    height: 25px;
    width: 25px;
    border-radius: 50%;
    margin-right: 14px;
    background: var(--grey);
    overflow: hidden;

    img{
        width: 100%;
    }
  
    .gatsby-image-wrapper > div {
      padding-bottom: 100% !important;
    }
  
    /*PHABLET*/
    @media screen and (max-width: $phablet){
        display: none;
    }
}

.hide-on-mobile{
    /*PHABLET*/
    @media screen and (max-width: $phablet){
        display: none;
    }
}

.article-coauthors-container{
    margin-right: 10px;
    position: relative;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    font-size: 18px;
    color: var(--grey);
    cursor: pointer;
  
    &::before {
      content: "";
      position: absolute;
      left: 0;
      right: 0;
      top: -16px;
      bottom: -16px;
      background: var(--card);
      -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
              box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
      border-radius: 5px;
      z-index: 0;
      -webkit-transition: opacity 0.3s;
      -o-transition: opacity 0.3s;
      transition: opacity 0.3s;
      cursor: pointer;
      opacity: 0;
    }
  
    &:hover::before {
      opacity: 1;
    }

    /*PHABLET*/
    @media screen and (max-width: $phablet){
        font-size: 14px;
        -webkit-box-align: center;
            -ms-flex-align: center;
                align-items: center;
    
        &::before {
          -webkit-box-shadow: none;
                  box-shadow: none;
          bottom: -30px;
          background: transparent;
        }
    
    
        strong {
          display: block;
          font-weight: semi-bold;
          margin-bottom: 5px;
        }
    }
}

.article-coauthors-collapsed{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}

.article-coauthors-list{
    position: relative;
    height: 25px;
    margin-right: 15px;
    margin-left: 15px;

    /*PHABLET*/
    @media screen and (max-width: $phablet){
        display: none;
    }
}

.article-coauthors-avatar{
    position: absolute;
    height: 25px;
    width: 25px;
    border-radius: 50%;
    z-index: 1;
    background: var(--grey);
    -webkit-box-shadow: 0 0 0 2px var(--background-color);
            box-shadow: 0 0 0 2px var(--background-color);
    -webkit-transition: -webkit-box-shadow 0.25s ease;
    transition: -webkit-box-shadow 0.25s ease;
    -o-transition: box-shadow 0.25s ease;
    transition: box-shadow 0.25s ease;
    transition: box-shadow 0.25s ease, -webkit-box-shadow 0.25s ease;
    overflow: hidden;
    pointer-events: none;
  
    img{
        width: 100%;
    }
  
    /*PHABLET*/
    @media screen and (max-width: $phablet){
        display: none;
    }
}

.article-coauthors-name-container{
    position: relative;
    max-width: 260px;
    white-space: nowrap;
    overflow: hidden;
    -o-text-overflow: ellipsis;
       text-overflow: ellipsis;
    font-weight: 600;
    cursor: pointer;
  
    /*DESKTOP*/
    @media screen and (max-width: $desktop){
        max-width: 120px;
    }
    
    /*PHABLET*/
    @media screen and (max-width: $phablet){
        max-width: 200px;
    }
}

.article-coauthors-icon-container{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    position: relative;
    cursor: pointer;
    margin-left: 10px;
    margin-right: 10px;
  
    /*PHABLET*/
    @media screen and (max-width: $phablet){
        position: absolute;
        right: 0;
        bottom: 0;
        top: 10px;
        height: 100%;
    }

}

.article-coauthors-list-open{
    position: absolute;
    z-index: 2;
    left: -21px;
    right: -21px;
    top: -19px;
    padding: 21px;
    background: var(--card);
    -webkit-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
    border-radius: 5px;
    cursor: pointer;
    list-style-type: none;
    -webkit-transform: translateY(-2px);
        -ms-transform: translateY(-2px);
            transform: translateY(-2px);


    li::before{
        display: none;
    }
}

.article-icon-open-container{
    position: absolute;
    cursor: pointer;
    top: 25px;
    right: 10px;

}

.article-coauthors-list-item-open{
    padding: 0;
    a {
        width: 100%;
    }
    
    &:not(:last-child) {
        margin-bottom: 10px;
    }
}

.article-coauthor-avatar-open{
    height: 25px;
    width: 25px;
    border-radius: 50%;
    margin-right: 15px;
    background: var(--grey);
    overflow: hidden;
    pointer-events: none;

    img{
        width: 100%;
    }
  
    .gatsby-image-wrapper > div {
      padding-bottom: 100% !important;
      overflow: hidden;
    }
}

.article-author-name-open{
    position: relative;
    cursor: pointer;
    color: var(--secondary);
    font-weight: 600;
}

/**************************************ARTICLE BODY**************************************/

.post-content{
    padding: 80px 0 35px;
}

/**************************************ARTICLE NEXT**************************************/

.footer-next-heading{
    display: block;
    font-size: 1.6rem;
    position: relative;
    opacity: 0.25;
    margin-left: 0;
    margin-right: 0;
    margin-bottom: 100px;
    min-width: 100%;
    font-weight: 400;
    color: var(--primary);
  
    /*TABLET*/
    @media screen and (max-width: $tablet){
        margin-bottom: 60px;
    }
  
    &::after {
        content: '';
        position: absolute;
        background: var(--grey);
        width: 62%;
        max-width: 100%;
        height: 1px;
        right: 0;
        top: 50%;

        /*TABLET*/
        @media screen and (max-width: $tablet){
          width: 41.7%;
        }

        /*PHABLET*/
        @media screen and (max-width: $phablet){
            width: 27.8%;
        }

        /*PHONE*/
        @media screen and (max-width: $phone){
            width: 90px;
        }
    }
}

.footer-spacer{
    margin-bottom: 65px;
}

